Fixed scrollbar overflow

--- a/src/core/components/layout-full/layout-full.styles.styl
+++ b/src/core/components/layout-full/layout-full.styles.styl
@@ -3,8 +3,9 @@
     flex-direction column
     justify-content space-between
     width 100vw
-    height 100%
-    padding-top 45px
+    height calc(100% - 45px)
+    margin-top 45px
+    overflow-y auto
 
     &__wrapper
         flex 1
