--- a/src/global.styl
+++ b/src/global.styl
@@ -3,7 +3,7 @@ html, body, #app-root
     height 100vh
     margin 0
     padding 0
-    overflow-x hidden
+    overflow hidden
 
 html, body, button, input, textarea, select
     font-family -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
